# generic-http-web-service-client-c

./: CMakeLists.txt  README.md  engine.h  generated_http_web_service_client.c  generated_http_web_service_client.h  http_status.h  image.h  photo.h  run_example_generated_http_web_service_client.c  sound.h  truck.h  vcpkg.json  video.h
.github/workflows/: cmake-multi-platform.yml
tests/integration/: CMakeLists.txt  create_engine.c
tests/unit/: CMakeLists.txt  service_exception.c  unit_tests.c
weburg/ghowst/: http_status.h  http_web_service_invoker.c  http_web_service_invoker.h
